test/corpus/control_flow.txt
==================
if with markup block
==================

component F() { { if c { <span/> } } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (control_flow
        (keyword)
        (go_cond_text)
        (block
          (element
            (self_closing_element
              name: (tag_name)))))))
  (go_chunk
    (go_text)))

==================
for range with interpolation
==================

component F() { { for _, x := range xs { <li>{x}</li> } } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (control_flow
        (keyword)
        (go_cond_text)
        (block
          (element
            (start_tag
              name: (tag_name))
            (interpolation
              (pipeline
                (go_interp_expr
                  (go_interp_text))))
            (end_tag
              (tag_name)))))))
  (go_chunk
    (go_text)))

==================
switch with case text
==================

component F() { { switch v { case "a": } } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (control_flow
        (keyword)
        (go_cond_text)
        (block
          (text)))))
  (go_chunk
    (go_text)))

==================
go_block statement
==================

component F() { <div>{{ x := 1 }}</div> }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name))
        (go_block
          (go_text))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
Babel markup-in-hole
==================

component F() { { <a/> } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (interpolation
        (element
          (self_closing_element
            name: (tag_name))))))
  (go_chunk
    (go_text)))

==================
Go comparison not leading-angle
==================

component F() { { a < b } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (interpolation
        (pipeline
          (go_interp_expr
            (go_interp_text))))))
  (go_chunk
    (go_text)))

==================
conditional_attribute
==================

component F() { <div { if c { class="x" } }></div> }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name)
          (attribute
            (conditional_attribute
              (keyword)
              (go_cond_text)
              (attribute
                (static_attribute
                  (attribute_name)
                  (quoted_string))))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
channel receive in interpolation
==================

component F() { { <-ch } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (interpolation
        (pipeline
          (go_interp_expr
            (go_interp_text))))))
  (go_chunk
    (go_text)))

==================
channel receive assignment in interpolation
==================

component F() { { y := <-ch } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (interpolation
        (pipeline
          (go_interp_expr
            (go_interp_text))))))
  (go_chunk
    (go_text)))

==================
else if flat form
==================

component F() { { if c { <a/> } else if d { <b/> } else { <c/> } } }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (control_flow
        (keyword)
        (go_cond_text)
        (block
          (element
            (self_closing_element
              name: (tag_name))))
        (else_clause
          (keyword)
          (keyword)
          (go_cond_text)
          (block
            (element
              (self_closing_element
                name: (tag_name)))))
        (else_clause
          (keyword)
          (block
            (element
              (self_closing_element
                name: (tag_name))))))))
  (go_chunk
    (go_text)))

==================
value-form if/else in attribute (leading, approach b)
==================

component F() { <div class={ if open { "on" } else { "off" } }></div> }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (value_control_flow
                (keyword)
                (go_cond_text)
                (block
                  (text))
                (else_clause
                  (keyword)
                  (block
                    (text)))))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
value-form switch in attribute (leading, approach b)
==================

component F() { <div class={ switch variant { case Green: "a" default: "b" } }></div> }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (value_control_flow
                (keyword)
                (go_cond_text)
                (block
                  (text))))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
value-form switch comma-prefix: unstructured (approach b limitation)
==================

component F() { <div class={ "x", switch v { case 1: "a" default: "b" } }></div> }

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (pipeline
                (go_interp_expr
                  (go_interp_text))))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))
