test/corpus/elements.txt
==================
elements, void, self-closing, hyphenated, attrs
==================

component E() {
  <div class="card">
    <br/>
    <el-dialog open></el-dialog>
    hello
  </div>
}

---

(source_file (go_chunk (go_text)) (component_declaration name: (identifier) parameters: (parameter_list)
  body: (body (element (start_tag name: (tag_name) (attribute (static_attribute (attribute_name) (quoted_string))))
    (element (self_closing_element name: (tag_name)))
    (element (start_tag name: (tag_name) (attribute (bool_attribute (attribute_name)))) (end_tag (tag_name)))
    (text)
    (end_tag (tag_name))))) (go_chunk (go_text)))
