test/corpus/holes_attrs.txt
==================
embedded JS/CSS attribute literals
==================

component H(id string, pct int) {
  <button @click=js`save(@{id})` style=css`width:@{pct}%`/>
  <button @click=js`save(\`hi @{id}\`)`/>
  <button @click={js`save(@{id})`}/>
  <button style={ "hidden": true, css`color:@{color}` }/>
  <button style={ "hidden": true, css`content:"\`";color:@{color}` }/>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (embedded_attribute
              (attribute_name)
              value: (embedded_js_literal
                (embedded_language)
                (embedded_text)
                (at_hole
                  (go_expr
                    (go_text)))
                (embedded_text))))
          (attribute
            (embedded_attribute
              (attribute_name)
              value: (embedded_css_literal
                (embedded_language)
                (embedded_text)
                (at_hole
                  (go_expr
                    (go_text)))
                (embedded_text))))))
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (embedded_attribute
              (attribute_name)
              value: (embedded_js_literal
                (embedded_language)
                (embedded_text)
                (at_hole
                  (go_expr
                    (go_text)))
                (embedded_text))))))
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (embedded_attribute
              (attribute_name)
              value: (embedded_js_literal
                (embedded_language)
                (embedded_text)
                (at_hole
                  (go_expr
                    (go_text)))
                (embedded_text))))))
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (css_composed_value
                (go_interp_expr
                  (go_interp_text))
                (embedded_css_literal
                  (embedded_language)
                  (embedded_text)
                  (at_hole
                    (go_expr
                      (go_text))))
                (style_go_text))))))
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (css_composed_value
                (go_interp_expr
                  (go_interp_text))
                (embedded_css_literal
                  (embedded_language)
                  (embedded_text)
                  (at_hole
                    (go_expr
                      (go_text))))
                (style_go_text))))))))
  (go_chunk
    (go_text)))

==================
holes, expr/bool/spread attributes
==================

component H(x int) {
  <div id={x} hidden { attrs... } class="c">
    {title}
    {user.Name}
  </div>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (pipeline
                (go_interp_expr
                  (go_interp_text)))))
          (attribute
            (bool_attribute
              (attribute_name)))
          (attribute
            (spread_attribute
              (go_spread_expr
                (go_spread_text))))
          (attribute
            (static_attribute
              (attribute_name)
              (quoted_string))))
        (interpolation
          (pipeline
            (go_interp_expr
              (go_interp_text))))
        (interpolation
          (pipeline
            (go_interp_expr
              (go_interp_text))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
markup value in attribute (expr_attribute accepts _hole_body)
==================

component C(x int) {
  <Panel header={ <h1>hi</h1> }/>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (element
                (start_tag
                  name: (tag_name))
                (text)
                (end_tag
                  (tag_name)))))))))
  (go_chunk
    (go_text)))

==================
interpolation auto-unwrap (no ? marker)
==================

component T() {
  {x}
  {y}
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (interpolation
        (pipeline
          (go_interp_expr
            (go_interp_text))))
      (interpolation
        (pipeline
          (go_interp_expr
            (go_interp_text))))))
  (go_chunk
    (go_text)))

==================
component-tag whole-struct splat
==================

component Page(p Props) {
  <Card { data... }/>
  <ui.Button { btn... }/>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (spread_attribute
              (go_spread_expr
                (go_spread_text))))))
      (element
        (self_closing_element
          name: (tag_name)
          (attribute
            (spread_attribute
              (go_spread_expr
                (go_spread_text))))))))
  (go_chunk
    (go_text)))
