test/corpus/pipeline.txt
==================
pipeline in hole and attr
==================

component P(name string) {
  <a title={name |> upper}>{ name |> upper |> truncate(20) }</a>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name)
          (attribute
            (expr_attribute
              (attribute_name)
              (pipeline
                (go_interp_expr
                  (go_interp_text))
                (pipe)
                (go_interp_expr
                  (go_interp_text))))))
        (interpolation
          (pipeline
            (go_interp_expr
              (go_interp_text))
            (pipe)
            (go_interp_expr
              (go_interp_text))
            (pipe)
            (go_interp_expr
              (go_interp_text))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
pipeline: parens do not split (truncate arg)
==================

component P() {
  <a>{ x |> truncate(20) }</a>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name))
        (interpolation
          (pipeline
            (go_interp_expr
              (go_interp_text))
            (pipe)
            (go_interp_expr
              (go_interp_text))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
pipeline: logical-or does not split
==================

component P() {
  <a>{ x || y }</a>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name))
        (interpolation
          (pipeline
            (go_interp_expr
              (go_interp_text))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))

==================
pipeline: bitwise-or does not split
==================

component P() {
  <a>{ a|b }</a>
}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body
      (element
        (start_tag
          name: (tag_name))
        (interpolation
          (pipeline
            (go_interp_expr
              (go_interp_text))))
        (end_tag
          (tag_name)))))
  (go_chunk
    (go_text)))
