test/corpus/toplevel.txt
==================
package, import, then component
==================

package views

import "github.com/gsxhq/gsx"

component Foo() {}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body))
  (go_chunk
    (go_text)))

==================
identifier ending in component is not a keyword
==================

var mycomponent = 1

component X() {}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body))
  (go_chunk
    (go_text)))

==================
two adjacent components
==================

component A() {}
component B() {}

---

(source_file
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body))
  (go_chunk
    (go_text))
  (component_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (body))
  (go_chunk
    (go_text)))
